--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,10 +1,6 @@
 FROM node:alpine as builder
 WORKDIR '/app'
-COPY ./package.json ./
+COPY package.json .
 RUN npm install
 COPY . .
-RUN npm run build
-FROM nginx
-EXPOSE 3000
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/build /usr/share/nignx/html
+CMD ["npm", "run", "start"]
